deployment/kubernetes/matrimony-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrimony-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: matrimony-backend
  template:
    metadata:
      labels:
        app: matrimony-backend
    spec:
      containers:
      - name: matrimony-backend
        #image:     
        ports:
        - containerPort: 80
