deployment/kubernetes/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-backend
  namespace: matrimony-app  # Add namespace here
spec:
  replicas: 2
  selector:
    matchLabels:
      app: php-backend
  template:
    metadata:
      labels:
        app: php-backend
    spec:
      containers:
      - name: php-backend
        image: your-dockerhub-user/matrimony-backend:latest
        ports:
        - containerPort: 80
