deployment/kubernetes/matrimony-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-backend-service
  namespace: matrimony-app  # Add namespace here
spec:
  selector:
    app: php-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
